Fixes to automated QC of metadata to get SubmitProcessTest (which is still incomplete) working.